docs: implement complete pink/slate/navy theme with Mermaid.js support
- Add Mermaid.js v10 integration via header.html with dark theme config
- Create universal-lsp-complete.css with comprehensive pink theme styling
- Fix all black SVG icons with universal ::before selector filter
- Implement full-width Mermaid diagrams with proper contrast
- Add Playwright validation tests for theme and diagram rendering
- Update GitHub Actions workflow to use RUSTDOCFLAGS with --extend-css and --html-in-header
- Remove deprecated universal-lsp.css

Theme features:
  • Mermaid.js diagrams render with pink/slate/navy colors
  • Dark navy text on pink nodes for excellent contrast
  • Universal icon colorization via brightness/hue-rotate/saturate filters
  • Full-width diagram layout with background and borders
  • Automated Playwright tests validate: diagrams render, no black icons, theme colors present

Validated: All Playwright tests passing (2 Mermaid diagrams, 0 black icons, all theme colors)

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -32,13 +32,9 @@ jobs:
 
       - name: Build documentation
         run: |
-          cargo doc --no-deps --document-private-items
+          export RUSTDOCFLAGS="--extend-css $PWD/docs/theme/universal-lsp-complete.css --html-in-header $PWD/docs/theme/header.html"
+          cargo doc --no-deps --lib
           echo '<meta http-equiv="refresh" content="0; url=universal_lsp/index.html">' > target/doc/index.html
-
-      - name: Apply custom theme
-        run: |
-          cp docs/theme/universal-lsp.css target/doc/
-          find target/doc -name "*.html" -type f -exec sed -i 's|<head>|<head><link rel="stylesheet" type="text/css" href="/universal-lsp.css">|' {} \;
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
