--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dashmap = "5.5"
 once_cell = "1.19"
 clap = { version = "4.4", features = ["derive"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
 url = "2.5"
+futures = "0.3"  # For streaming support
 tree-sitter = "0.20"  # Using 0.20.10 for HTML/CSS/JSON/Svelte compatibility
 
 # Strategy: Use tree-sitter 0.20.10-compatible versions for maximum language support
